package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "init.go",
    ],
    importpath = "github.com/binchencoder/letsgo",
    deps = [
        "//log:go_default_library",
        "//runtime:go_default_library",
        "//version:go_default_library",
    ],
)
