package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/letsgo/grpc",
    deps = [
        "//hashring:go_default_library",
        "//ident:go_default_library",
        "//trace:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_gateway_proto//frontend:go_default_library",
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_uber_jaeger_client_go//:go_default_library",
        "@com_github_uber_jaeger_client_go//config:go_default_library",
        "@com_github_uber_jaeger_client_go//rpcmetrics:go_default_library",
        "@com_github_uber_jaeger_lib//metrics/go-kit:go_default_library",
        "@com_github_uber_jaeger_lib//metrics/go-kit/expvar:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "tests",
    size = "small",
    srcs = glob(["*_test.go"]),
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//hashring:go_default_library",
        "//ident:go_default_library",
        "//trace:go_default_library",
        "@com_github_cenkalti_backoff//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_gateway_proto//frontend:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "backoff_test.go",
        "chain_test.go",
        "error_test.go",
        "metadata_test.go",
        "recoverint_test.go",
        "serviceId_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//hashring:go_default_library",
        "//ident:go_default_library",
        "//trace:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_gateway_proto//frontend:go_default_library",
        "@com_github_cenkalti_backoff//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
