package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/letsgo/ident",
    deps = [
        "//ease-gateway/proto/data:go_default_library",
        "//third-party-go/vendor/golang.org/x/net/context:go_default_library",
    ],
)

go_test(
    name = "ident_test",
    size = "small",
    srcs = glob(["*_test.go"]),
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//ease-gateway/proto/data:go_default_library",
        "//third-party-go/vendor/golang.org/x/net/context:go_default_library",
    ],
)
