package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/letsgo/ident",
    deps = [
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "ident_test",
    size = "small",
    srcs = glob(["*_test.go"]),
    embed = [
        ":go_default_library",
    ],
    deps = [
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["ident_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
