package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/letsgo/log",
    deps = [
        "//grpc:go_default_library",
        "//trace:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "stderr_tests",
    size = "medium",
    srcs = ["stderr_test.go"],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["stderr_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_smartystreets_goconvey//convey:go_default_library"],
)
