package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "header.go",
        "trace.go",
    ],
    importpath = "github.com/binchencoder/letsgo/trace",
    deps = [
        "//third-party-go/vendor/github.com/golang/glog:go_default_library",
        "//third-party-go/vendor/github.com/pborman/uuid:go_default_library",
        "//third-party-go/vendor/golang.org/x/net/context:go_default_library",
        "//third-party-go/vendor/google.golang.org/grpc/metadata:go_default_library",
    ],
)

go_test(
    name = "trace_test",
    size = "small",
    srcs = [
        "header_test.go",
        "trace_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//third-party-go/vendor/golang.org/x/net/context:go_default_library",
        "//third-party-go/vendor/google.golang.org/grpc/metadata:go_default_library",
    ],
)
