package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "header.go",
        "trace.go",
    ],
    importpath = "github.com/binchencoder/letsgo/trace",
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_pborman_uuid//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "trace_test",
    size = "small",
    srcs = [
        "header_test.go",
        "trace_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "header_test.go",
        "trace_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
