package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "version.go",
    ],
    importpath = "binchencoder.com/letsgo/version",
    x_defs = {
        "BUILD_EMBED_LABEL": "{BUILD_EMBED_LABEL}",
        "BUILD_HOST": "{BUILD_HOST}",
        "BUILD_TIMESTAMP": "{BUILD_TIMESTAMP}",
        "BUILD_USER": "{BUILD_USER}",
    },
    deps = [
        "@com_github_golang_glog//:go_default_library",
    ],
)
